--- a/src/main/res/values-tg/strings.xml
+++ b/src/main/res/values-tg/strings.xml
@@ -20,97 +20,97 @@
   -->
 
 <resources>
-    <string name="layers_drawer_open">Открыть список слоёв</string>
-    <string name="layers_drawer_close">Закрыть список слоёв</string>
-    <string name="ok">OK</string>
-    <string name="create">Создать</string>
-    <string name="cancel">Отменить</string>
-    <string name="osm">OpenStreetMap</string>
-    <string name="layer_name">Имя слоя</string>
-    <string name="layer_url">URL слоя</string>
-    <string name="layer_url_hint">Пример: http://{a,b,c}.tile.openstreetmap.org/{z}/{x}/{y}.png</string>
-    <string name="layer_type">Тип TMS</string>
-    <string name="create_layer">Создать слой</string>
-    <string name="create_tms_layer">Добавить слой TMS</string>
-    <string name="create_qms_layer">Добавить геосервис</string>
+    <string name="layers_drawer_open">Рӯйхати қабатҳои кушодед</string>
+    <string name="layers_drawer_close">Рӯйхати қабатро пӯшед</string>
+    <string name="ok">Дуруст</string>
+    <string name="create">Сохтан</string>
+    <string name="cancel">Бекор кардан</string>
+    <string name="osm">Харитаи кӯчаҳоро кушоед</string>
+    <string name="layer_name">Номи қабат</string>
+    <string name="layer_url">Нишони қабати</string>
+    <string name="layer_url_hint">Мисол: http://{a,b,c}.tile.openstreetmap.org/{z}/{x}/{y}.png</string>
+    <string name="layer_type">Намуди TMS</string>
+    <string name="create_layer">Эҷоди қабат</string>
+    <string name="create_tms_layer">Иловаи қабати TMS </string>
+    <string name="create_qms_layer">Илова геосервис</string>
     <string name="tmstype_osm">XYZ (OSM)</string>
     <string name="tmstype_normal">TMS (OSGeo)</string>
-    <string name="error_invalid_url">Неправильный URL</string>
-    <string name="qms_unavailable">Сервер геосервисов недоступен</string>
+    <string name="error_invalid_url">URL-и нодуруст</string>
+    <string name="qms_unavailable">Сервери геосервис дастнорас аст</string>
     <string name="nextgis_web">NextGIS</string>
     <string name="ngw_url">NextGIS Web URL</string>
-    <string name="password">Пароль</string>
-    <string name="login">Войти</string>
-    <string name="user_name">Имя пользователя</string>
-    <string name="canceled">Отменено</string>
-    <string name="ngw_account_already_exists">Учетная запись уже существует</string>
-    <string name="error_login">Ошибка входа</string>
-    <string name="ngw_layer_add">Добавить из Веб ГИС</string>
+    <string name="password">Рамз</string>
+    <string name="login">Ворид шудан</string>
+    <string name="user_name">Номи корбар</string>
+    <string name="canceled">Бекор карда шудааст</string>
+    <string name="ngw_account_already_exists">Ин гуна номи корбар аллакай мавҷуд аст</string>
+    <string name="error_login">талоши вуруд ноком шуд</string>
+    <string name="ngw_layer_add">Илова аз Web GIS</string>
     <string name="ngw_accounts">Веб ГИС</string>
-    <string name="ngid_account_new">Зарегистрироваться</string>
-    <string name="ngw_account_add">Добавить Веб ГИС</string>
-    <string name="ngw_account_delete">Удалить учетную запись</string>
-    <string name="ngw_account_delete_summary">Все слои связанные с этой учетной записью будут удалены.\nСинхронизация будет остановлена.</string>
-    <string name="ngw_account_delete_warn_msg">Учетная запись будет удалена!\nВсе слои будут удалены!\nСинхронизация будет остановлена!</string>
-    <string name="waiting">Пожалуйста подождите</string>
-    <string name="wait_sync_stopping">Ожидание остановки синхронизации</string>
-    <string name="add">Добавить</string>
-    <string name="select">Выбор</string>
-    <string name="choose_layers">Выбрать слой</string>
-    <string name="loading_summary">Подождите, идет загрузка данных</string>
+    <string name="ngid_account_new">Ба қайд гирифтан</string>
+    <string name="ngw_account_add">Иловаи Web GIS</string>
+    <string name="ngw_account_delete">Нест кардани ҳисоби худ</string>
+    <string name="ngw_account_delete_summary">Ҳамаи қабатҳои марбут ба ин ҳисоб тоза карда мешаванд.\nСинхронизатсия қатъ хоҳад шуд.</string>
+    <string name="ngw_account_delete_warn_msg">Ҳисоб нест карда мешавад!\nҲама қабатҳо нест карда мешаванд!\nСинхронизатсия қатъ хоҳад шуд!</string>
+    <string name="waiting">Лутфан мунтазир шавед</string>
+    <string name="wait_sync_stopping">Интизорӣ барои синхронизатсия </string>
+    <string name="add">Илова кардан</string>
+    <string name="select">Интихоб</string>
+    <string name="choose_layers">Интихоби қабат</string>
+    <string name="loading_summary">Интизор шавед, иттилоот бор карда истодааст</string>
     <string name="up_dots">..</string>
-    <string name="up">Вверх</string>
-    <string name="resource_group">Группа ресурсов</string>
-    <string name="raster">Растр</string>
+    <string name="up">Боло</string>
+    <string name="resource_group">Гурӯҳи захиравӣ</string>
+    <string name="raster">Растер</string>
     <string name="vector">Вектор</string>
-    <string name="raster_layer">Растровый слой</string>
-    <string name="vector_layer">Векторный слой</string>
-    <string name="pg_layer">Слой PostGIS</string>
-    <string name="credentials_opt">Имя/пароль (опционально)</string>
-    <string name="layer_type_optional">Тип тайлового слоя (опционально)</string>
-    <string name="sync">Синхронизация</string>
-    <string name="auto_sync">Автоматическая синхронизация</string>
-    <string name="auto_sync_summary">Синхронизация через заданный интервал</string>
-    <string name="sync_interval">Интервал синхронизации</string>
-    <string name="actions">Действия</string>
-    <string name="sync_layers">Настроить слои</string>
-    <string name="sync_layers_summary">Проверка слоёв для синхронизации</string>
-    <string name="layer_group">Группа</string>
-    <string name="layer_ngw_raster">Растр NGW</string>
-    <string name="layer_ngw_vector">Слой NGW</string>
-    <string name="layer_tms">Тайловый растр</string>
-    <string name="layer_na">Недоступно</string>
-    <string name="latitude_caption">Широта</string>
-    <string name="longitude_caption">Долгота</string>
-    <string name="altitude_caption">Высота</string>
-    <string name="accuracy_caption">Точность</string>
-    <string name="set_attributes">Установить атрибуты</string>
-    <string name="latitude_caption_short">Ш.</string>
+    <string name="raster_layer">Қабати растерӣ</string>
+    <string name="vector_layer">Қабати векторӣ</string>
+    <string name="pg_layer">Қабати PostGIS</string>
+    <string name="credentials_opt">Номи корбар / рамз (ихтиёрӣ)</string>
+    <string name="layer_type_optional">Намуди қабати номатлуб (ихтиёрӣ)</string>
+    <string name="sync">Ҳамоҳангсозӣ</string>
+    <string name="auto_sync">Ҳамоҳангсозии худкор</string>
+    <string name="auto_sync_summary">ҳамоҳангсозӣ фосилавӣ</string>
+    <string name="sync_interval">Фосилаи ҳамоҳангсозӣ</string>
+    <string name="actions">Амалҳо</string>
+    <string name="sync_layers">Танзимоти қабат</string>
+    <string name="sync_layers_summary">Тафтиши қабатҳои синхронизатсия</string>
+    <string name="layer_group">Гурӯҳ</string>
+    <string name="layer_ngw_raster">Растер NGW</string>
+    <string name="layer_ngw_vector">Қабати NGW</string>
+    <string name="layer_tms">Растери тайлови</string>
+    <string name="layer_na">Дастрас нест</string>
+    <string name="latitude_caption">паҳноӣ</string>
+    <string name="longitude_caption">Дарозӣ</string>
+    <string name="altitude_caption">Баландӣ</string>
+    <string name="accuracy_caption">Дурустӣ</string>
+    <string name="set_attributes">Таъин кардани сифатҳо</string>
+    <string name="latitude_caption_short">П.</string>
     <string name="longitude_caption_short">Д.</string>
-    <string name="altitude_caption_short">В.</string>
-    <string name="accuracy_caption_short">Т.</string>
-    <string name="accurate_location">Уточнить местоположение</string>
-    <string name="accurate_taking">Сбор и усреднение координат…</string>
-    <string name="action_settings">Настройки</string>
-    <string name="do_not_ask_again">Больше не спрашивать</string>
-    <string name="apply">Применить</string>
-    <string name="error_db_insert">Ошибка добавления объекта</string>
-    <string name="error_db_update">Ошибка обновления объекта</string>
-    <string name="error_db_query">Ошибка чтения объекта</string>
-    <string name="error_db_delete">Ошибка удаления объекта</string>
-    <string name="create_vector_layer">Создать векторный слой</string>
-    <string name="new_layer">Новый слой</string>
-    <string name="message_layer_created">Слой создан</string>
-    <string name="feature_n">Объект #%1$d</string>
-    <string name="new_feature">Новый объект</string>
-    <string name="error_form_create">Не удалось создать форму</string>
-    <string name="system_default">Системная настройка по умолчанию</string>
-    <string name="five_minutes">5 минут</string>
-    <string name="ten_minutes">10 минут</string>
-    <string name="fifteen_minutes">15 минут</string>
-    <string name="thirty_minutes">30 минут</string>
-    <string name="one_hour">1 час</string>
-    <string name="two_hours">2 часа</string>
+    <string name="altitude_caption_short">Б.</string>
+    <string name="accuracy_caption_short">Д.</string>
+    <string name="accurate_location">Дақиқтар кардани макон</string>
+    <string name="accurate_taking">Ҷамъоварӣ ва ба ҳисоби миёна координатаҳо...</string>
+    <string name="action_settings">Танзимот</string>
+    <string name="do_not_ask_again">Дигар савол надиҳед</string>
+    <string name="apply">Ба кор бурдан</string>
+    <string name="error_db_insert">Хатоги дар илова кардани объект</string>
+    <string name="error_db_update">Хатогии дар навсозии объект</string>
+    <string name="error_db_query">Хатоги дар хондани объект</string>
+    <string name="error_db_delete">Хатогӣ дар нест кардани объект</string>
+    <string name="create_vector_layer">Сохтани қабати векторӣ</string>
+    <string name="new_layer">Қабати нав</string>
+    <string name="message_layer_created">Қабат сохта шуд</string>
+    <string name="feature_n">Объекти #%1$d</string>
+    <string name="new_feature">Объекти нав</string>
+    <string name="error_form_create">Форматро эҷод кардан натавонист</string>
+    <string name="system_default">Танзимоти пешфарзии система</string>
+    <string name="five_minutes">5 дақиқа</string>
+    <string name="ten_minutes">10 дақиқа</string>
+    <string name="fifteen_minutes">15 дақиқа</string>
+    <string name="thirty_minutes">30 дақиқа</string>
+    <string name="one_hour">1 соат</string>
+    <string name="two_hours">2 соат</string>
     <string name="sync_set_interval">Установить интервал синхронизации</string>
     <string name="last_sync_time">Обновлено %1$s в %2$s</string>
     <string name="ngw_different_credentials">Существующая учетная запись отличается от введенных параметров. Будет использоваться существующая учетная запись.</string>
