--- a/src/main/res/values-tg/strings.xml
+++ b/src/main/res/values-tg/strings.xml
@@ -111,115 +111,115 @@
     <string name="thirty_minutes">30 дақиқа</string>
     <string name="one_hour">1 соат</string>
     <string name="two_hours">2 соат</string>
-    <string name="sync_set_interval">Установить интервал синхронизации</string>
-    <string name="last_sync_time">Обновлено %1$s в %2$s</string>
-    <string name="ngw_different_credentials">Существующая учетная запись отличается от введенных параметров. Будет использоваться существующая учетная запись.</string>
-    <string name="error_no_location">Координаты не определены</string>
-    <string name="error_layer_not_inited">Слой не инициализирован. Отмена</string>
+    <string name="sync_set_interval">Насб кардани фосилаи ҳамоҳангсози</string>
+    <string name="last_sync_time">Навсозӣ %1$s то %2$s</string>
+    <string name="ngw_different_credentials">Ҳисоби мавҷуда аз параметрҳои воридшуда фарқ мекунад. Ҳисоби мавҷуда истифода хоҳад шуд</string>
+    <string name="error_no_location">Координатҳо муайян нашудаанд</string>
+    <string name="error_layer_not_inited">Қабат оғоз карда намешавад. Бекор кардан</string>
     <string name="n_a">н/д</string>
-    <string name="layer_vector">Векторный слой</string>
-    <string name="layer_permanent">Это постоянный слой</string>
-    <string name="empty_tracks">Треков пока нет</string>
-    <string name="menu_delete">Удалить</string>
-    <string name="menu_select_all">Выбрать все</string>
-    <string name="menu_share">Поделиться</string>
-    <string name="menu_visibility_on">Показать</string>
-    <string name="menu_visibility_off">Скрыть</string>
-    <string name="nothing_selected">Ничего не выбрано</string>
-    <string name="unclosed_track_deleted">Текущий трек тоже удален</string>
+    <string name="layer_vector">Қабати векторӣ</string>
+    <string name="layer_permanent">Ин як қабати доимӣ аст</string>
+    <string name="empty_tracks">Ҳоло ягон роҳ нест</string>
+    <string name="menu_delete">Нест кардан</string>
+    <string name="menu_select_all">Интихоби ҳама</string>
+    <string name="menu_share">Паҳн кардан</string>
+    <string name="menu_visibility_on">Намоиш</string>
+    <string name="menu_visibility_off">Пинҳон кардан</string>
+    <string name="nothing_selected">Ҳеҷ чиз интихоб нашудааст</string>
+    <string name="unclosed_track_deleted">Роҳи ҷорӣ низ нест карда мешавад</string>
     <string name="folder">Папка</string>
-    <string name="zip">zip-архив</string>
-    <string name="formbuilder">Файл FormBuilder</string>
-    <string name="geojson">Файл GeoJSON</string>
-    <string name="unknown_file">Файл неизвестного типа</string>
-    <string name="add_point">Добавить точку</string>
-    <string name="edit_attributes">Редактировать атрибуты</string>
-    <string name="move_point_to_current_location">Точка в текущее местоположение</string>
-    <string name="delete_point">Удалить точку</string>
-    <string name="add_multipoint">Добавить мультиточку</string>
-    <string name="delete_multipoint">Удалить мультиточку</string>
-    <string name="delete_item_done">Объект удален</string>
-    <string name="delete_layer_done">Слой удален</string>
-    <string name="add_line">Добавить линию</string>
-    <string name="delete_line">Удалить линию</string>
-    <string name="edit_by_walk">Дополнить геометрию обходом</string>
-    <string name="add_multilinestring">Добавить мультилинию</string>
-    <string name="delete_multilinestring">Удалить мультилинию</string>
-    <string name="add_polygon">Добавить полигон</string>
-    <string name="add_hole">Добавить дырку</string>
-    <string name="delete_polygon">Удалить полигон</string>
-    <string name="delete_hole">Удалить дырку</string>
-    <string name="add_multipolygon">Добавить мультиполигон</string>
-    <string name="delete_multipolygon">Удалить мультиполигон</string>
-    <string name="save">Сохранить</string>
-    <string name="undo">Отмена</string>
-    <string name="redo">Повтор</string>
+    <string name="zip">бойгонии zip</string>
+    <string name="formbuilder">Файли FormBuilder</string>
+    <string name="geojson">Файли GeoJSON</string>
+    <string name="unknown_file">Намуди файли номаълум</string>
+    <string name="add_point">Илова нуқтаи</string>
+    <string name="edit_attributes">Таҳрир кардани сифатҳо</string>
+    <string name="move_point_to_current_location">Ба макони ҷойгиршави ишора кунед</string>
+    <string name="delete_point">Нест кардани нуқта</string>
+    <string name="add_multipoint">Иловаи бисёрсоҳавӣ нуқта</string>
+    <string name="delete_multipoint">Нест кардани нуқтаи бисёрсоҳавӣ</string>
+    <string name="delete_item_done">Объект нест карда шуд</string>
+    <string name="delete_layer_done">Қабат нест карда шуд</string>
+    <string name="add_line">Иловаи сатр</string>
+    <string name="delete_line">Нест кардани сатр</string>
+    <string name="edit_by_walk">Иловакунии геометрия</string>
+    <string name="add_multilinestring">Иловаи чанд хат</string>
+    <string name="delete_multilinestring">Нест кардани чанд хат</string>
+    <string name="add_polygon">Иловаи бисёрҷониба</string>
+    <string name="add_hole">Иловаи сӯрохи</string>
+    <string name="delete_polygon">Нест карадани бисёркунҷа</string>
+    <string name="delete_hole">Нест карадани сӯрохи</string>
+    <string name="add_multipolygon">Иловаи мултипликатори</string>
+    <string name="delete_multipolygon">Нест карадани мултипликатори</string>
+    <string name="save">Сабт кардан</string>
+    <string name="undo">Бекор кардан</string>
+    <string name="redo">Такрор</string>
     <string name="retry">@string/redo</string>
-    <string name="error_create_feature">Ошибка создания записи</string>
-    <string name="no">Нет</string>
-    <string name="yes">Да</string>
-    <string name="has_edits">Есть несохраненные изменения. Хотите сохранить их?</string>
-    <string name="attributes_next">Следующий</string>
-    <string name="attributes_prev">Предыдущий</string>
-    <string name="not_enough_points">Недостаточно точек</string>
-    <string name="error_change_feature">Ошибка изменения записи</string>
-    <string name="move_point_to_center">Точка в центр экрана</string>
-    <string name="mainSettings">Основные настройки</string>
-    <string name="displaySettings">Настройки отображения</string>
-    <string name="fill_color">Цвет заливки</string>
-    <string name="stroke_color">Цвет обводки</string>
-    <string name="width">Толщина</string>
-    <string name="size">Размер</string>
-    <string name="fill">Заливка</string>
-    <string name="type">Тип</string>
-    <string name="type_solid">Сплошная</string>
-    <string name="type_dash">Пунктир</string>
-    <string name="type_edge">Сплошная по границам</string>
-    <string name="type_point">Точка</string>
-    <string name="type_circle">Круг</string>
-    <string name="type_diamond">Ромб</string>
-    <string name="type_cross">Крест</string>
-    <string name="type_triangle">Треугольник</string>
+    <string name="error_create_feature">Хатогӣ ҳангоми сохтани сабт</string>
+    <string name="no">На</string>
+    <string name="yes">Бале</string>
+    <string name="has_edits">Тағироти сабт нашудаанд. Мехоҳед онҳоро сабт кунед?</string>
+    <string name="attributes_next">Навбатӣ</string>
+    <string name="attributes_prev">Пешина</string>
+    <string name="not_enough_points">Нуқтаҳои кофӣ нестанд</string>
+    <string name="error_change_feature">Хатогӣ ҳангоми тағир додани сабт</string>
+    <string name="move_point_to_center">Ба маркази экран ишора кунед</string>
+    <string name="mainSettings">Танзимоти асосӣ</string>
+    <string name="displaySettings">Танзимот дисплей</string>
+    <string name="fill_color">Рехтаи рангро интихоб кунед</string>
+    <string name="stroke_color">Рангро интихоб намоед</string>
+    <string name="width">Ғафсӣ</string>
+    <string name="size">Андозаи</string>
+    <string name="fill">Рехтан</string>
+    <string name="type">Намуд</string>
+    <string name="type_solid">Қавӣ</string>
+    <string name="type_dash">Хати нуқта</string>
+    <string name="type_edge">Идома оид ба марзҳо</string>
+    <string name="type_point">Нуқта</string>
+    <string name="type_circle">Доира</string>
+    <string name="type_diamond">Ромбус</string>
+    <string name="type_cross">Салиб</string>
+    <string name="type_triangle">Секунҷа</string>
     <string name="type_box">Квадрат</string>
-    <string name="type_edit_circle">Круг 2</string>
-    <string name="type_crossed_box">Крест в квадрате</string>
-    <string name="layerSettings">Настройки слоя</string>
-    <string name="label_field_toast">Поле %1$s выбрано как метка</string>
-    <string name="red">красный</string>
-    <string name="green">зеленый</string>
-    <string name="blue">синий</string>
-    <string name="magenta">пурпурный</string>
-    <string name="yellow">желтый</string>
-    <string name="cyan">голубой</string>
-    <string name="select_color">Выбрать цвет</string>
-    <string name="edit_account">Редактировать учетную запись</string>
-    <string name="edit_account_summary">Изменение имени и пароля пользователя</string>
-    <string name="tms_layer_cache_size">Размер кэша тайлов TMS</string>
-    <string name="make_grayscale">Градации серого</string>
-    <string name="contrast">Контраст: %1$.1f</string>
-    <string name="brightness">Яркость</string>
-    <string name="menu_zoom_extent">Увеличить до охвата</string>
-    <string name="menu_download_tiles">Загрузить тайлы</string>
-    <string name="select_zoom_levels_to_download">Выберите масштабные уровни для загрузки тайлов в текущем окне</string>
-    <string name="start">Начать</string>
-    <string name="current_zoom">Текущий зум %1$.2f</string>
-    <string name="download_complete">Загрузка завершена</string>
-    <string name="download_in_progress">Загрузка…</string>
-    <string name="cancel_download">Загрузка отменена</string>
-    <string name="download_tiles">Загрузка тайлов</string>
-    <string name="form_tiles_list">Формирование списка тайлов</string>
-    <string name="tiles_count">%1$s тайлов</string>
-    <string name="counting">Идет подсчет…</string>
-    <string name="tracks_running">Записывается трек</string>
-    <string name="tracks_title">Трек %s</string>
-    <string name="walkedit_title">Ввод обходом %s</string>
-    <string name="tracks_stop">Стоп</string>
-    <string name="tracks_open">Открыть</string>
-    <string name="download_tiles_finished">Завершена загрузка тайлов</string>
-    <string name="not_implemented">Пока не сделано</string>
-    <string name="layer_lookuptable">Справочник</string>
-    <string name="zoom_levels_to_show">Масштабные уровни, на которых виден слой</string>
-    <string name="alpha">Непрозрачность</string>
+    <string name="type_edit_circle">Доира 2</string>
+    <string name="type_crossed_box">Салиби мураббаъ</string>
+    <string name="layerSettings">Танзимоти қабати</string>
+    <string name="label_field_toast">Майдони %1$s ҳамчун нишона интихоб карда шуд</string>
+    <string name="red">Сурх</string>
+    <string name="green">Сабз</string>
+    <string name="blue">Кабуд</string>
+    <string name="magenta">Арғувон</string>
+    <string name="yellow">Зард</string>
+    <string name="cyan">Осмон ранг</string>
+    <string name="select_color">Рангро интихоб кунед</string>
+    <string name="edit_account">Таҳрири ба хисобгириӣ сабт</string>
+    <string name="edit_account_summary">Иваз кардани номи корбар ва рамз</string>
+    <string name="tms_layer_cache_size">Андозаи кэш TMS</string>
+    <string name="make_grayscale">Дараҷабандиӣ хокистарранг</string>
+    <string name="contrast">Муқоиса: %1$.1f</string>
+    <string name="brightness">Равшанӣ</string>
+    <string name="menu_zoom_extent">Баландӣ ба фарогирӣ</string>
+    <string name="menu_download_tiles">Зеркашӣ сафолҳои</string>
+    <string name="select_zoom_levels_to_download">Сатҳи миқёсро барои боркунии сафҳаҳо дар равзанаи ҷорӣ интихоб кунед</string>
+    <string name="start">Оғоз</string>
+    <string name="current_zoom">Ҷойгиркунии зум %1$.2f</string>
+    <string name="download_complete">Боркунӣ ба анҷом расид</string>
+    <string name="download_in_progress">Боркунӣ...</string>
+    <string name="cancel_download">ЗБоркунӣ бекор карда шуд</string>
+    <string name="download_tiles">Боркунӣ плиткаҳо</string>
+    <string name="form_tiles_list">Сохтани рӯйхати сафҳаҳо</string>
+    <string name="tiles_count">%1$s сафолҳои</string>
+    <string name="counting">Ҳисоб кардан ...</string>
+    <string name="tracks_running">Трек сабт карда шуд</string>
+    <string name="tracks_title">Роҳрав %s</string>
+    <string name="walkedit_title">Воридкунӣ, гузаштан аз %s</string>
+    <string name="tracks_stop">Ист</string>
+    <string name="tracks_open">Кушодан</string>
+    <string name="download_tiles_finished">Боркунии плиткаҳо ба анҷом расид</string>
+    <string name="not_implemented">Ҳоло кор карда нашудааст</string>
+    <string name="layer_lookuptable">маълумотнома</string>
+    <string name="zoom_levels_to_show">Сатҳи миқёс, ки дар он қабат намоён аст</string>
+    <string name="alpha">Шаффофӣ</string>
     <string name="layerInfo">Информация о слое</string>
     <string name="geom_type">Тип геометрии</string>
     <string name="feature_count">Объектов: %1$d (%2$s)</string>
